fix(styles): tweak styling on smaller screen sizes

--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -15,6 +15,17 @@
   background: var(--board-background) repeat;
 }
 
+@media screen and (max-width: 600px) {
+  .board {
+    padding: 0;
+    gap: 1em;
+  }
+
+  .section {
+    justify-content: center;
+  }
+}
+
 .section {
   display: grid;
   grid-template-columns: repeat(var(--num-tableau-stacks), var(--card-width));
